Integrate stream with websocket
Signed-off-by: Ammar Faizi <ammarfaizi2@gnuweeb.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,8 @@
 		"typeindex": "cpp",
 		"typeinfo": "cpp",
 		"valarray": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"cfenv": "cpp",
+		"charconv": "cpp"
 	}
 }
